<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="G_Parameters" Id="{bf1f20ef-581e-4190-8cbe-0310987fd2eb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
stParam		:	ST_Parameters;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>